# katip-profiling

./: Readme.md  eventlog-katipAddContext.html  eventlog-katipSetContext.html  flake.nix  katip-profiling.cabal  makefile
src/: Template.hs
