cabal-version:      3.0

name:           katip-profiling
version:        1.0.0
homepage:       https://github.com/jappeace/katip-profiling#readme
bug-reports:    https://github.com/jappeace/katip-profiling/issues
author:         Jappie Klooster
maintainer:     hi@jappie.me
copyright:      2020 Jappie Klooster
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    Readme.md
    LICENSE
extra-doc-files:
    Changelog.md

source-repository head
  type: git
  location: https://github.com/jappeace/katip-profiling

common common-options
  default-extensions: 
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      MultiParamTypeClasses
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      TupleSections
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving
      OverloadedStrings
      TypeApplications
      NumericUnderscores
      ImportQualifiedPost

  ghc-options:
    -O2 -Wall -Werror -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fenable-th-splice-warnings
    -fno-omit-yields
    -threaded -rtsopts 

  build-depends:
      base >=4.9.1.0 && <4.21.0,
      katip,
      text

  default-language: Haskell2010

library
  import: common-options
  exposed-modules:
      Template
  hs-source-dirs:
      src

executable exe
  import: common-options
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      katip-profiling
  ghc-options: -Wno-unused-packages
               "-with-rtsopts=-N -p -s -hc -K1K -M200M -l"
               -fprof-auto
               -prof
